refactor: move traditional CRDs back to jenkins.io group so we dont need to create new CRDs

--- a/pkg/cmd/requirement/resolve/test_data/backwards_compatible_requirements_file/new/jx-requirements.yml
+++ b/pkg/cmd/requirement/resolve/test_data/backwards_compatible_requirements_file/new/jx-requirements.yml
@@ -15,6 +15,11 @@ spec:
     provider: gke
     registry: gcr.io
     zone: us-east1-c
+  ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
   repository: nexus
   secretStorage: vault
+  vault: {}
   webhook: lighthouse
