fix: support separate ingress domain per namespace
by using a namespace specific jx-values.yaml file for each namespace helmfile which contains the combination of requirements, global values and any fake secrets

ideally there would be a nice way to do this in helmfile without repeating the file name in the enivironment and in each chart; but until there is we have to do it this way

--- a/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/expected-jx-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/expected-jx-helmfile.yaml
@@ -1,4 +1,8 @@
 filepath: ""
+environments:
+  default:
+    values:
+    - jx-values.yaml
 namespace: jx
 repositories:
 - name: dev
@@ -9,10 +13,14 @@ releases:
 - chart: dev/dummy
   version: 1.2.3
   name: dummy
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 - chart: jx3/jx-build-controller
   name: jx-build-controller
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 templates: {}
