--- a/pkg/cmd/helmfile/resolve/test_data/input/expected-jx-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/input/expected-jx-helmfile.yaml
@@ -1,4 +1,8 @@
 filepath: ""
+environments:
+  default:
+    values:
+    - jx-values.yaml
 namespace: jx
 repositories:
 - name: stable
@@ -15,19 +19,26 @@ releases:
   name: chartmuseum
   values:
   - ../../versionStream/charts/stable/chartmuseum/values.yaml.gotmpl
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 - chart: jenkins-x/jxboot-helmfile-resources
   version: 0.0.255
   name: jxboot-helmfile-resources
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 - chart: doesnotexist/bucketrepo
   name: bucketrepo
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 - chart: jx3/jx-build-controller
   name: jx-build-controller
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 templates: {}
