--- a/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-jx-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-jx-helmfile.yaml
@@ -1,4 +1,8 @@
 filepath: ""
+environments:
+  default:
+    values:
+    - jx-values.yaml
 namespace: jx
 repositories:
 - name: jenkins-x
@@ -9,6 +13,8 @@ releases:
 - chart: jenkins-x/jxboot-helmfile-resources
   version: 0.0.255
   name: jxboot-helmfile-resources
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 - chart: jx3/jenkins-x-crds
@@ -16,15 +22,20 @@ releases:
   name: jenkins-x-crds
   values:
   - ../../versionStream/charts/jx3/jenkins-x-crds/values.yaml.gotmpl
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 - chart: jx3/local-external-secrets
   version: 0.0.3
   name: local-external-secrets
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 - chart: jx3/jx-build-controller
   name: jx-build-controller
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 templates: {}
