--- a/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-secret-infra-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-secret-infra-helmfile.yaml
@@ -1,4 +1,8 @@
 filepath: ""
+environments:
+  default:
+    values:
+    - jx-values.yaml
 namespace: secret-infra
 repositories:
 - name: jx3
@@ -6,10 +10,14 @@ repositories:
 releases:
 - chart: jx3/vault-instance
   name: vault-instance
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 - chart: jx3/pusher-wave
   name: pusher-wave
+  values:
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 templates: {}
