--- a/pkg/cmd/helmfile/resolve/test_data/no-versionstream/expected-external-secrets-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/no-versionstream/expected-external-secrets-helmfile.yaml
@@ -1,4 +1,8 @@
 filepath: ""
+environments:
+  default:
+    values:
+    - jx-values.yaml
 namespace: external-secrets
 repositories:
 - name: external-secrets
@@ -9,6 +13,7 @@ releases:
   name: kubernetes-external-secrets
   values:
   - ../../values/kubernetes-external-secrets/values.yaml.gotmpl
+  - jx-values.yaml
   forceNamespace: ""
   skipDeps: null
 templates: {}
