chore: bump jx-api version

--- a/pkg/cmd/requirement/merge/test_data/expected.yml
+++ b/pkg/cmd/requirement/merge/test_data/expected.yml
@@ -5,6 +5,9 @@ spec:
     enabled: false
     schedule: ""
   cluster:
+    azure:
+      secretStorage:
+        keyVaultName: applejack
     chartRepository: http://bucketrepo/bucketrepo/charts/
     clusterName: tf-jx-sweet-lemur
     environmentGitOwner: todo
