--- a/pkg/cmd/requirement/merge/test_data/changes.yml
+++ b/pkg/cmd/requirement/merge/test_data/changes.yml
@@ -8,6 +8,9 @@ cluster:
   project: "jenkins-x-labs-bdd"
   provider: gke
   zone: "us-central1-a"
+  azure:
+    secretStorage:
+      keyVaultName: applejack
 gitops: true
 environments:
 - key: dev
