feat: replaced custom merge with an all encompassing one.

--- a/pkg/cmd/requirement/merge/test_data/expected.yml
+++ b/pkg/cmd/requirement/merge/test_data/expected.yml
@@ -10,6 +10,8 @@ spec:
         keyVaultName: applejack
     chartRepository: http://bucketrepo/bucketrepo/charts/
     clusterName: tf-jx-sweet-lemur
+    devEnvApprovers:
+    - todo
     environmentGitOwner: todo
     gitKind: github
     gitName: github
