chore: fix issue if an environment has ingress without a domain
so that an environment specific ingress can specify the whole ingress or reuse the domain or have a generated sub domain

--- a/pkg/cmd/helmfile/resolve/test_data/custom-env-ingress/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/custom-env-ingress/expected-helmfile.yaml
@@ -2,6 +2,7 @@ filepath: ""
 helmfiles:
 - path: helmfiles/foo/helmfile.yaml
 - path: helmfiles/jx/helmfile.yaml
+- path: helmfiles/jx-production/helmfile.yaml
 - path: helmfiles/jx-staging/helmfile.yaml
 - path: helmfiles/nginx/helmfile.yaml
 - path: helmfiles/secret-infra/helmfile.yaml
