fix: improve the jenkins configuration
so we can configure groups + repos more easily inside a jenkins server

--- a/pkg/cmd/jenkins/jobs/test_data/.jx/gitops/source-config.yaml
+++ b/pkg/cmd/jenkins/jobs/test_data/.jx/gitops/source-config.yaml
@@ -1,17 +1,14 @@
 apiVersion: gitops.jenkins-x.io/v1alpha1
 kind: SourceConfig
 spec:
-  groups:
-  - owner: myorg
-    provider: https://github.com
-    providerKind: github
-    providerName: github
-    repositories:
-      - name: myapp
-        jenkins:
-          server: myjenkins
-          xmlTemplate: jenkins/templates/default.xml.gotmpl
-      - name: another
-        jenkins:
-          server: myjenkins
-          xmlTemplate: jenkins/templates/default.xml.gotmpl
+  jenkinsXmlTemplate: jenkins/templates/default.xml.gotmpl
+  jenkinsServers:
+  - server: myjenkins
+    groups:
+    - owner: myorg
+      provider: https://github.com
+      providerKind: github
+      providerName: github
+      repositories:
+        - name: myapp
+        - name: another
