--- a/pkg/cmd/requirement/merge/test_data/sample/expected.yml
+++ b/pkg/cmd/requirement/merge/test_data/sample/expected.yml
@@ -27,6 +27,7 @@ spec:
   ingress:
     domain: foo.io
     externalDNS: false
+    kind: ingress
     namespaceSubDomain: -jx.
     tls:
       email: ""
