fix: add support for github pages chart repository

--- a/pkg/cmd/requirement/merge/test_data/azure/expected.yml
+++ b/pkg/cmd/requirement/merge/test_data/azure/expected.yml
@@ -10,7 +10,7 @@ spec:
         resourceGroup: my_dns_resource_group
         subscriptionId: my_dns_subscription_id
         tenantId: my_dns_tenant_id
-    chartOCI: true
+    chartKind: oci
     chartRepository: mythingy.azurecr.io
     clusterName: my_cluster_name
     devEnvApprovers:
