--- a/pkg/cmd/requirement/merge/test_data/azure/jx-requirements.yml
+++ b/pkg/cmd/requirement/merge/test_data/azure/jx-requirements.yml
@@ -6,7 +6,7 @@ spec:
     schedule: ""
   cluster:
     chartRepository: mythingy.azurecr.io
-    chartOCI: true
+    chartKind: oci
     devEnvApprovers:
     - todo
     environmentGitOwner: todo
