chore: add a little example of optional contexts

--- a/pkg/cmd/scheduler/test_data/versionStream/schedulers/in-repo.yaml
+++ b/pkg/cmd/scheduler/test_data/versionStream/schedulers/in-repo.yaml
@@ -13,7 +13,10 @@ spec:
     merge_method: merge
     policy:
       from-branch-protection: true
-      optional-contexts: { }
+      optional-contexts:
+        entries:
+          - cheese
+          - wine
       required-contexts: { }
       required-if-present-contexts: { }
       skip-unknown-contexts: false
