--- a/pkg/cmd/helmfile/resolve/test_data/no-versionstream/expected-external-secrets-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/no-versionstream/expected-external-secrets-helmfile.yaml
@@ -6,7 +6,7 @@ environments:
 namespace: external-secrets
 repositories:
 - name: external-secrets
-  url: https://external-secrets.github.io/kubernetes-external-secrets
+  url: https://storage.googleapis.com/jenkinsxio/charts
 releases:
 - chart: external-secrets/kubernetes-external-secrets
   version: 4.0.0
