--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-secret-infra-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-secret-infra-helmfile.yaml
@@ -6,7 +6,7 @@ environments:
 namespace: secret-infra
 repositories:
 - name: external-secrets
-  url: https://storage.googleapis.com/jenkinsxio/charts
+  url: https://external-secrets.github.io/kubernetes-external-secrets
 - name: jx3
   url: https://storage.googleapis.com/jenkinsxio/charts
 releases:
