fix: lets add better configuration
and add default global slack configuration

--- a/pkg/cmd/repository/add/test_data/anewthingy/expected.yaml
+++ b/pkg/cmd/repository/add/test_data/anewthingy/expected.yaml
@@ -13,3 +13,6 @@ spec:
     - name: jx-cli
     - name: jx-gitops
   scheduler: cheese
+  slack:
+    channel: '#jenkins-x-pipelines'
+    kind: failureOrNextSuccess
