--- a/pkg/cmd/repository/add/test_data/mygitlab/expected.yaml
+++ b/pkg/cmd/repository/add/test_data/mygitlab/expected.yaml
@@ -17,3 +17,6 @@ spec:
     repositories:
     - name: mygitlab
   scheduler: cheese
+  slack:
+    channel: '#jenkins-x-pipelines'
+    kind: failureOrNextSuccess
