--- a/pkg/cmd/repository/add/test_data/myjenkins/expected.yaml
+++ b/pkg/cmd/repository/add/test_data/myjenkins/expected.yaml
@@ -19,3 +19,6 @@ spec:
       repositories:
       - name: myjenkins
     server: jenkins1
+  slack:
+    channel: '#jenkins-x-pipelines'
+    kind: failureOrNextSuccess
