fix: add more filters for slack notify

--- a/pkg/cmd/repository/export/test_data/expected.yaml
+++ b/pkg/cmd/repository/export/test_data/expected.yaml
@@ -12,3 +12,7 @@ spec:
     - name: jx-cli
     - name: jx-gitops
     scheduler: cheese
+  slack:
+    channel: '#jenkins-x-pipelines'
+    kind: failureOrNextSuccess
+    pipeline: release
