fix: migrate the chart to the v3 chart repo

--- a/pkg/cmd/helmfile/resolve/test_data/custom-env-ingress/helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/custom-env-ingress/helmfile.yaml
@@ -6,6 +6,8 @@ releases:
     - versionStream/charts/jenknis-x/chartmuseum/values.yaml.gotmpl
   - chart: jenkins-x/tekton
   - chart: jenkins-x/jxboot-helmfile-resources
+    values:
+    - versionStream/charts/jenkins-x/jxboot-helmfile-resources/values.yaml.gotmpl
   - chart: doesnotexist/myapp
     namespace: jx-staging
   - chart: doesnotexist/myapp
