--- a/pkg/cmd/helmfile/resolve/test_data/custom-env-ingress/expected-jx-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/custom-env-ingress/expected-jx-helmfile.yaml
@@ -7,12 +7,10 @@ namespace: jx
 repositories:
 - name: stable
   url: https://charts.helm.sh/stable
-- name: jenkins-x
-  url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
-- name: doesnotexist
-  url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
 - name: jx3
   url: https://storage.googleapis.com/jenkinsxio/charts
+- name: doesnotexist
+  url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
 releases:
 - chart: stable/chartmuseum
   version: 2.4.1
@@ -20,10 +18,11 @@ releases:
   values:
   - ../../versionStream/charts/stable/chartmuseum/values.yaml.gotmpl
   - jx-values.yaml
-- chart: jenkins-x/jxboot-helmfile-resources
-  version: 0.0.255
+- chart: jx3/jxboot-helmfile-resources
+  version: 1.0.37
   name: jxboot-helmfile-resources
   values:
+  - ../../versionStream/charts/jx3/jxboot-helmfile-resources/values.yaml.gotmpl
   - jx-values.yaml
 - chart: doesnotexist/bucketrepo
   name: bucketrepo
