chore: expose prometheus metrics on lighthouse
lighthouse uses its config to know if it should expose an internal http handler with prometheus metrics (on /metrics)
let's enable it by default - lighthouse is already taking care of using an internal http server for it, so it has no security impact (on the webhook server which might be exposed to everybody)

note that it's not enough to enable automatic scraping of the metrics by prometheus: for that, we need to add a specific label on the lighthouse pods

--- a/pkg/pipelinescheduler/test_data/merger_with_parent/config.yaml
+++ b/pkg/pipelinescheduler/test_data/merger_with_parent/config.yaml
@@ -42,7 +42,8 @@ presubmits:
       rerun_command: /test this
       trigger: (?m)^/test( all| this),?(\s+|$)
 #prowjob_namespace: jx
-#push_gateway: {}
+push_gateway:
+  serve_metrics: true
 #sinker: {}
 tide:
   target_url: http://targeturl
