--- a/pkg/pipelinescheduler/test_data/multiple_contexts/config.yaml
+++ b/pkg/pipelinescheduler/test_data/multiple_contexts/config.yaml
@@ -63,7 +63,8 @@ presubmits:
       rerun_command: /test context3
       trigger: (?m)^/test( all| context3),?(\s+|$)
 #prowjob_namespace: jx
-#push_gateway: {}
+push_gateway:
+  serve_metrics: true
 #sinker: {}
 tide:
   context_options:
