--- a/pkg/pipelinescheduler/test_data/policy_with_parent/config.yaml
+++ b/pkg/pipelinescheduler/test_data/policy_with_parent/config.yaml
@@ -71,7 +71,8 @@ presubmits:
       rerun_command: /test this
       trigger: (?m)^/test( all| this),?(\s+|$)
 #prowjob_namespace: jx
-#push_gateway: {}
+push_gateway:
+  serve_metrics: true
 #sinker: {}
 tide:
   context_options:
