--- a/pkg/cmd/requirement/publish/test_data/config-root/namespaces/jx/jxboot-helmfile-resources/dev-environment.yaml
+++ b/pkg/cmd/requirement/publish/test_data/config-root/namespaces/jx/jxboot-helmfile-resources/dev-environment.yaml
@@ -17,7 +17,7 @@ spec:
   promotionStrategy: "Never"
   webHookEngine: "Lighthouse"
   teamSettings:
-    appsRepository: http://chartmuseum.jenkins-x.io
+    appsRepository: https://storage.googleapis.com/chartmuseum.jenkins-x.io
     buildPackRef: "master"
     buildPackUrl: "https://github.com/jenkins-x/jx3-pipeline-catalog.git"
     defaultScheduler:
