fix: upgrade to the https URL for jenkins-x charts

--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/helmfiles/secret-infra/helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/helmfiles/secret-infra/helmfile.yaml
@@ -8,7 +8,7 @@ repositories:
 - name: external-secrets
   url: https://storage.googleapis.com/jenkinsxio/charts
 - name: jx3
-  url: https://storage.googleapis.com/jenkinsxio/charts
+  url: http://chartmuseum.jenkins-x.io
 releases:
 - chart: external-secrets/kubernetes-external-secrets
   name: kubernetes-external-secrets
