--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-secret-infra-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-secret-infra-helmfile.yaml
@@ -8,7 +8,7 @@ repositories:
 - name: external-secrets
   url: https://external-secrets.github.io/kubernetes-external-secrets
 - name: jx3
-  url: https://storage.googleapis.com/jenkinsxio/charts
+  url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
 releases:
 - chart: external-secrets/kubernetes-external-secrets
   version: 4.0.0
