--- a/pkg/cmd/helmfile/move/test_data/dirIncludesReleaseName/nginx/nginx-ingress/nginx-ingress/templates/nginx-ingress-clusterrole.yaml
+++ b/pkg/cmd/helmfile/move/test_data/dirIncludesReleaseName/nginx/nginx-ingress/nginx-ingress/templates/nginx-ingress-clusterrole.yaml
@@ -2,6 +2,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  annotations:
+    meta.helm.sh/release-name: my-release-name
   labels:
     app: nginx-ingress
     chart: nginx-ingress-1.39.1
