chore: add more tests and fix up some gremlins

--- a/pkg/cmd/helmfile/add/test_data/expected/helmfile.yaml
+++ b/pkg/cmd/helmfile/add/test_data/expected/helmfile.yaml
@@ -1,5 +1,6 @@
 filepath: ""
 helmfiles:
+- path: helmfiles/cheese/helmfile.yaml
 - path: helmfiles/jx/helmfile.yaml
 - path: helmfiles/nginx/helmfile.yaml
 templates: {}
