--- a/pkg/cmd/helmfile/add/test_data/expected/helmfiles/nginx/helmfile.yaml
+++ b/pkg/cmd/helmfile/add/test_data/expected/helmfiles/nginx/helmfile.yaml
@@ -11,7 +11,7 @@ repositories:
   url: https://kubernetes.github.io/ingress-nginx
 releases:
 - chart: ingress-nginx/ingress-nginx
-  version: 3.12.0
+  version: "4.0"
   name: nginx-ingress
   values:
   - ../../versionStream/charts/ingress-nginx/ingress-nginx/values.yaml.gotmpl
