--- a/.github/workflows/plugins-pr.yaml
+++ b/.github/workflows/plugins-pr.yaml
@@ -25,6 +25,7 @@ jobs:
           ./build/${{ matrix.target }}/${{ matrix.binary }} version
           ./build/${{ matrix.target }}/${{ matrix.binary }} plugin upgrade
           ./build/${{ matrix.target }}/${{ matrix.binary }} --help
+          ls -al ~/.jx3/plugins/bin
 
 on:
   pull_request:
