fix: upgrade dependencies

--- a/pkg/cmd/ingress/test_data/notls/expected/namespaces/myapps/modify-old-ingress.yaml
+++ b/pkg/cmd/ingress/test_data/notls/expected/namespaces/myapps/modify-old-ingress.yaml
@@ -11,8 +11,6 @@ spec:
   - host: godemo48.my.domain.com
     http:
       paths:
-      - backend:
-          serviceName: godemo48
-          servicePort: 80
+      - backend: {}
 status:
   loadBalancer: {}
