--- a/pkg/cmd/ingress/test_data/tls/expected/namespaces/myapps/modify-old-ingress.yaml
+++ b/pkg/cmd/ingress/test_data/tls/expected/namespaces/myapps/modify-old-ingress.yaml
@@ -11,9 +11,7 @@ spec:
   - host: godemo48.my.domain.com
     http:
       paths:
-      - backend:
-          serviceName: godemo48
-          servicePort: 80
+      - backend: {}
   tls:
   - hosts:
     - godemo48.my.domain.com
