--- a/pkg/cmd/ingress/test_data/notls/expected/namespaces/myapps/modify-ingress.yaml
+++ b/pkg/cmd/ingress/test_data/notls/expected/namespaces/myapps/modify-ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -12,7 +12,9 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: godemo48
-          servicePort: 80
+          service:
+            name: godemo48
+            port:
+              number: 80
 status:
   loadBalancer: {}
